# app/controllers/api/v1/account/organizations_controller.rb
@@ -1,9 +1,15 @@
 class Api::V1::Account::OrganizationsController < Api::V1::Account::AccountController
+  def index
+    organizations = current_user.organizations
+
+    render json: OrganizationSerializer.new(organizations), status: 200
+  end
+
   def create
     organization = current_user.own_organizations.build(organization_params)
 
     if organization.save
-      head(:no_content)
+      render json: OrganizationSerializer.new(organization), status: 201
     else
       render json: ErrorsSerializer.new(organization), status: 422
     end
