# app/serializers/organization_serializer.rb
@@ -1,0 +1,5 @@
+class OrganizationSerializer
+  include JSONAPI::Serializer
+
+  attribute :id, :name
+end
